@@ -5,6 +5,30 @@ affecting the class header or implementation header file are ignored if these
 files already exist. Options accepting a `filename' do not accept path names,
 i.e., they cannot contain directory separators (tt(/)); options accepting a
 'pathname' may contain directory separators. 
+
+Some options may generate warnings. This happens when an option conflicts with
+the contents of a file which bic() cannot modify (e.g., a parser
+class header file exists, but doesn't define a name space, but a
+tt(--namespace) option was provided). In those cases the option is
+ignored, and hand-editing may then be required to effectuate the option.
+
+COMMENT(
+    class header:           warn for class-name mismatch
+                            warn for not including baseclass-header
+                            warn for namespace mismatch
+                            if the 'scanner' option was provided:
+                                warn for missing "scanner" include-spec
+                                warn for missing Scanner d_scanner spec.
+
+    implementation header:  warn for not including the class header
+                            warn for class-name mismatch in inline defined
+                                     members
+                            warn for namespace mismatch
+                            warn for a mismatch in the scanner-token-function
+                                     name
+END)
+
+
     itemization(
     it() loption(analyze-only) (soption(A))nl()
            Only analyze the grammar. No files are (re)written. This option can
@@ -151,19 +175,18 @@ i.e., they cannot contain directory separators (tt(/)); options accepting a
     it() label(MAXDEPTH) laoption(max-inclusion-depth)(value)nl()
            Set the maximum number of nested grammar files. Defaults to 10.
 
-    it() loption(namespace) tt(namespace) nl()
+    it() loption(namespace) tt(identifier) nl()
            Define all of the code generated by bic() in the name space
-            tt(namespace). By default no name space is defined. If this
+            tt(identifier). By default no name space is defined. If this
             options is used the implementation header is provided with a
             commented out tt(using namespace) declaration for the specified
             name space. In addition, the parser and parser base class
             header files also use the specified namespace to define their
             include guard directives.
 
-           A warning is issued if this option is used and an already
-            existing parser-class header file does not define tt(class
-            `className') and/or if an already existing implementation header
-            file does not define members of the class tt(`className').
+           A warning is issued if this option is used and an already existing
+            parser-class header file or implementation header file does not
+            define tt(namespace identifier).
 
     it() loption(no-baseclass-header)nl()
            Do not write the file containing the parser class' base class, even
