@@ -3,7 +3,7 @@
 std::string const &Options::accept(PathType pathType, char const *declTxt)
 {
     if (pathType == FILENAME && d_matched->find('/') != string::npos)
-        emsg << '`' << declTxt << "' option/directive: no path names" << endl;
+        emsg << '`' << declTxt << "' directive: no path names" << endl;
 
     return *d_matched;
 }
